[gd_scene load_steps=6 format=3 uid="uid://8lqwhgs6xne1"]

[ext_resource type="Texture2D" uid="uid://i12q10ttsgri" path="res://assets/bomb.png" id="1"]
[ext_resource type="Script" path="res://game/enemies/Bomb.gd" id="2"]
[ext_resource type="PackedScene" path="res://game/HealthBar.tscn" id="3"]
[ext_resource type="Script" path="res://game/AutoDeletable.gd" id="4"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(10, 6)

[node name="Bomb" type="Area2D"]
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="HealthBar" parent="." instance=ExtResource("3")]
position = Vector2(-5, -5)
polygon = PackedVector2Array(0, 0, 10, 0, 10, 1, 0, 1)
width = 10
height = 1

[node name="AutoDeletable" type="Node" parent="."]
script = ExtResource("4")

[connection signal="area_entered" from="." to="." method="_on_Bomb_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Bomb_area_exited"]
